<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="action_save">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="address">Address</string>
    <string name="app_name">Contacts</string>
    <string name="birthday">Birthday</string>
    <string name="cancel">Cancel</string>
    <string name="contacts">Contacts</string>
    <string name="delete_user">Delete User</string>
    <string name="dialog_header_icon">Dialog Header Icon</string>
    <string name="dob">DOB</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="invalid_birthday">Please enter a value for birthday.</string>
    <string name="invalid_first_name">Please enter a value for First Name.</string>
    <string name="invalid_last_name">Please enter a value for Last Name.</string>
    <string name="home">Home</string>
    <string name="last_name">Last Name</string>
    <string name="no">No</string>
    <string name="no_users_text">No users found</string>
    <string name="ok">OK</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="save_changes">Save Changes</string>
	<string name="search">Search</string>
    <string name="user">User</string>
    <string name="users">Users</string>
    <string name="user_pic">Picture of user</string>
    <string name="yes">Yes</string>
</resources>
