<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="200"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        android:orderInCategory="300"
        android:icon="@drawable/ic_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_user"
        android:title="@string/user"
        android:orderInCategory="400"
        android:icon="@drawable/ic_user"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:orderInCategory="500"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom" />

</menu>
