<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android                                           ="http://schemas.android.com/apk/res/android"
    xmlns:app                                               ="http://schemas.android.com/apk/res-auto"
    android:id                                              ="@+id/add_user_view"
    android:orientation                                     ="vertical"
    android:layout_width                                    ="match_parent"
    android:layout_height                                   ="match_parent">

    <!-- User info - first name, last name and birthday. -->
    <RelativeLayout
        android:id                                          ="@+id/userInfoLayout"
        android:orientation                                 ="horizontal"
        android:layout_width                                ="match_parent"
        android:layout_height                               ="wrap_content">

        <RelativeLayout
            android:id                                      ="@+id/userImageLayout"
            android:orientation                             ="vertical"
            android:layout_centerVertical                   ="true"
            android:layout_width                            ="wrap_content"
            android:layout_height                           ="match_parent">

            <ImageButton
                android:id                                  ="@+id/userImage"
                android:layout_width                        ="wrap_content"
                android:layout_height                       ="wrap_content"
                android:contentDescription                  ="@string/user_pic"
                android:layout_alignParentStart             ="true"
                android:layout_centerVertical               ="true"
                android:background                          ="#00000000"
                android:src                                 ="@drawable/ic_user"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_toEndOf                          ="@id/userImageLayout"
            android:layout_alignParentEnd                   ="true"
            android:layout_centerVertical                   ="true"
            android:orientation                             ="vertical"
            android:layout_width                            ="match_parent"
            android:layout_height                           ="match_parent">

            <EditText
                android:id                                  ="@+id/userFirstName"
                android:layout_width                        ="match_parent"
                android:layout_height                       ="wrap_content"
                android:imeOptions                          ="actionDone"
                android:hint                                ="@string/first_name"/>

            <EditText
                android:id                                  ="@+id/userLastName"
                android:layout_width                        ="match_parent"
                android:layout_height                       ="wrap_content"
                android:imeOptions                          ="actionDone"
                android:hint                                ="@string/last_name"/>

            <EditText
                android:id                                  ="@+id/userDOB"
                android:layout_width                        ="match_parent"
                android:layout_height                       ="wrap_content"
                android:clickable                           ="true"
                android:focusable                           ="false"
                android:imeOptions                          ="actionDone"
                android:hint                                ="@string/birthday"/>

        </LinearLayout>

    </RelativeLayout>

    <!-- User tabs - address, email and phone. -->
    <RelativeLayout
        android:orientation                                 ="horizontal"
        android:layout_width                                ="match_parent"
        android:layout_height                               ="wrap_content">

        <android.support.design.widget.TabLayout
            android:id                                      ="@+id/user_tab_layout"
            android:layout_width                            ="match_parent"
            android:layout_height                           ="wrap_content"
            android:background                              ="?attr/colorPrimary"
            android:elevation                               ="6dp"
            android:minHeight                               ="?attr/actionBarSize"
            app:tabMode                                     ="fixed"
            android:theme                                   ="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <android.support.v4.view.ViewPager
            android:id                                      ="@+id/userTabPager"
            android:layout_width                            ="match_parent"
            android:layout_height                           ="fill_parent"
            android:layout_below                            ="@id/user_tab_layout"/>

    </RelativeLayout>

</LinearLayout>